# hermes

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  Earthfile  LICENSE  README.adoc  README.md  build.sh  cspell.config.yaml  hermes-custom.tar.xz  rust-toolchain.toml  setup.sh
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/default/: Dockerfile  devcontainer-lock.json  devcontainer.json
.devcontainer/development/: Dockerfile  devcontainer.json
.devcontainer/test/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: issue.yml
.github/linter/: zizmor.yaml
.github/linters/: .ecrc  .editorconfig-checker.json  .markdown-lint.yml  .yaml-lint.yml  zizmor.yaml
.github/workflows/: build_and_test.yml  integration.yml  lint.yml  linting.yml  release.yml
code/: Cargo.toml  rust-toolchain.toml
code/cupid/: Cargo.toml
code/cupid/src/: lib.rs  main.rs
code/src/: lib.rs  main.rs
data/base/home/.config/bash/: 50-hermes.sh
data/base/home/.config/blesh/: init.sh
data/config/bash/: 90-hermes.sh  91-hermes_settings.sh
data/config/bat/themes/: evergruv-dark.tmTheme
data/config/blesh/: init.sh
data/config/bottom/: config.toml
data/config/btop/themes/: evergruv-light.theme
data/config/nvim/: init.lua
data/config/starship/: starship.toml
data/core/bash/: 90-hermes.sh  91-hermes_settings.sh
data/core/bottom/: config.toml
data/core/home/.config/bash/: 20-custom_early.sh  50-hermes.sh  90-hermes.sh  91-hermes_settings.sh
data/core/home/.config/nvim/: init.lua
data/core/starship/: starship.toml
data/distributions/ubuntu/24.04/core/: ubuntu.sources
data/distributions/ubuntu/25.04/core/: git.sources  neovim.sources  ubuntu.sources
data/distributions/ubuntu/25.04/gui/: vscode.sources
data/examples/bash/: .bashrc  99-custom_late.sh
data/examples/git/: gitconfig
data/examples/gui/: colors_and_more.yaml
data/examples/gui/home/: .profile
data/examples/vs_code/: extensions.sh  keybindings.jsonc  settings.jsonc
data/gui/: colors_and_more.yaml
data/gui/home/: .profile
data/gui/home/.config/: mimeapps.list
data/gui/home/.config/regolith3/: Xresources
data/gui/home/.config/rofi/: everforest-light.rasi
data/gui/home/.config/sway/: config  user_early.conf
data/gui/home/.config/waybar/: config.jsonc  style-dark.css  style-light.css
data/gui/home/.config/xdg-desktop-portal/: portals.conf
data/home/.config/bash/: 20-custom_early.sh  90-hermes.sh  99-custom_late.sh
data/home/.config/bat/themes/: evergruv-light.tmTheme
data/home/.config/btop/themes/: evergruv-dark.theme
data/home/.config/nvim/: init.lua
data/home/.config/zellij/: config.kdl
data/manuals/: git.md
data/scripts/: remove_old_kernels.sh  remove_snap.sh  setup_doas.sh  setup_flatpak.sh  setup_fonts.sh  setup_gnupg.sh  setup_gui.sh  setup_icons.sh  setup_locales.sh
data/scripts/neovim/: .gitignore  Dockerfile  build.sh  compose.yaml
data/unversioned/: index.txt
data/unversioned/data/home/: .bashrc
data/unversioned/home/: .bashrc
data/unversioned/home/.config/bash/: 00-base.sh  10-misc.sh  20-custom_early.sh  30-extra_programs.sh  30-init_extra_programs.sh  40-misc.sh  40-override_commands.sh  50-hermes.sh  50-init_extra_programs.sh  60-override_commands.sh  80-global_aliases.sh  99-custom_late.sh
data/unversioned/home/.config/blesh/: init.sh
data/unversioned/home/.config/nvim/: init.lua
data/unversioned/home/.config/starship/: starship.toml
data/unversioned/home/.config/zellij/: config.kdl
data/unversioned/no_gui/: index.txt
data/unversioned/no_gui/data/home/: .bashrc
data/versioned/23.10/: post_setup.sh
data/versioned/23.10/gui/: index.txt  packages.txt
data/versioned/23.10/no_gui/: index.txt  packages.txt
data/versioned/24.04/: post_setup.sh
data/versioned/24.04/apt/: flatpak.sources  git.sources  ubuntu.sources
data/versioned/24.04/apt_gui/: alacritty.sources  vscode.sources
data/versioned/24.04/gui/: index.txt  packages.txt
data/versioned/24.04/gui/apt/: cryptomator.sources  regolith.sources  vscode.sources
data/versioned/24.04/no_gui/: index.txt  packages.txt
examples/bash/: 99-custom_late.sh
examples/gui/: colors_and_more.yaml
examples/gui/.config/: mimeapps.list
examples/gui/.config/alacritty/: 10-miscellaneous.toml  30-colors-everforest-light.toml  30-colors-gruvbox-material-dark.toml  30-colors.toml  32-colors_light.toml  40-bindings.toml  alacritty.toml
examples/gui/.config/environment.d/: 30-electron-ozone-wayland.conf
examples/gui/.config/regolith3/kanshi/: home.conf  work.conf
examples/gui/.config/regolith3/sway/: config
examples/gui/.config/rofi/: config.rasi  gruvbox-material-dark.rasi  gruvbox-material.rasi
examples/gui/.config/swaylock/: config  config_dark  everforest-light
examples/gui/.config/waybar/: config.jsonc  style-dark.css  style-light.css
examples/gui/.local/share/applications/: microsoft_outlook.desktop  (+1 more)
examples/gui/alacritty/: 10-miscellaneous.toml  alacritty.toml
examples/gui/regolith3/: Xresources
examples/gui/regolith3/usr_local_bin/: custom_way_lock
examples/gui/waybar/: config.jsonc  style.css
examples/neovim/: init.lua
examples/regolith3/: Xresources
examples/regolith3/usr_local_bin/: custom_way_lock
examples/scripts/: remove_old_kernels.sh  setup_flatpak.sh  setup_icons.sh  setup_locales.sh
examples/vs_code/: extensions.sh  settings.jsonc
examples/waybar/: config.jsonc  style.css
misc/: ble-sh.sh  flatpak.sh  remove_old_kernels.sh  remove_snap.sh  setup_doas.sh  setup_flatpak.sh  setup_fonts.sh  setup_gnupg.sh  setup_locales.sh
misc/examples/: 20-custom_early.sh  99-custom_late.sh  ble_config.sh  init.lua  init.lua.neovim
misc/examples/bash/: 99-custom_late.sh
misc/examples/vs_code/: extensions.sh  keybindings.jsonc  settings.jsonc
misc/regolith3/sway/config.d/: 00-custom
programs/git/: Dockerfile  Earthfile  compose.yaml
programs/neovim/: Dockerfile  Earthfile
scripts/: setup_doas.sh  setup_flatpak.sh  setup_fonts.sh  setup_gnupg.sh  setup_icons.sh  setup_locales.sh
versioned/24.04/apt/: git.sources
(+66 files in other folders)
