[package]
name = "hermes"
version = "7.1.1"
edition = "2024"
publish = false

description = "Configures Ubuntu by installing various packages and placing (new) configuration files"

repository = "https://github.com/georglauterbach/hermes"
license-file = "../LICENSE"
readme = "../README.adoc"

keywords = ["setup", "linux"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
async-compression = { version = "0.4", default-features = false, features = [
  "gzip",
  "tokio",
  "xz",
] }
async-std = { version = "1.13", features = ["unstable"] }
bytes = "1.10"
clap = { version = "4.5", features = ["cargo", "derive", "env"] }
clap-verbosity-flag = { version = "3.0", default-features = false, features = [
  "tracing",
] }
const_format = "0.2"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "socks",
] }
tokio = { version = "1.44", default-features = false, features = [
  "rt-multi-thread",
  "macros",
] }
tokio-tar = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "7.0"

[profile.release]
overflow-checks = true
strip = true

[lints]

# General lints "inherent" in Rustlang.
[lints.rust]
# We require docs on all items
missing_docs = "deny"
# We require a debug implementation on all items
missing_debug_implementations = "deny"

# Lint target for code documentation. When running `rustdoc`,
# show an error when using broken links.
[lints.rustdoc]
all = "deny"
broken_intra_doc_links = "deny"
private_intra_doc_links = "allow"

# Lint target for Clippy ("A collection of lints to catch common
# mistakes and improve your Rust code.", ref:
# https://doc.rust-lang.org/nightly/clippy/)
[lints.clippy]
# Clippy lint target one. Enables all lints that are on by
# default (correctness, suspicious, style, complexity, perf).
all = "deny"
# Clippy lint target two. Enables lints which are rather strict
# or have occasional false positives.
nursery = "deny"
# Clippy lint target three. Enables new lints that are still
# under development
pedantic = "deny"
# Clippy lint target four. Enable lints for the cargo manifest
# file, a.k.a. Cargo.toml.
cargo = { level = "deny", priority = 0 }
multiple_crate_versions = { level = "allow", priority = 1 }
# Individual lints go here now:
missing_docs_in_private_items = "deny"
