[package]
name = "cupid"
version = "0.1.0"
edition = "2024"

workspace = ".."

description = "Helps hermes by packing an archive for hermes' offline installation"

[dependencies]
anyhow = { version = "1.0", default-features = false }
async-compression = { version = "0.4", default-features = false, features = [
    "gzip",
    "tokio",
    "xz-parallel",
] }
bytes = { version = "1.11", default-features = false }
clap = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "socks"
] }
tokio = { workspace = true }
astral-tokio-tar = { workspace = true }
zip = { version = "7.0", default-features = true }

[lints]
workspace = true
