[package]
name = "cupid"
version = "0.1.0"
edition = "2024"
description = "Helps hermes by packing an archive for hermes' offline installation"
workspace = ".."

[dependencies]
anyhow = { version = "1.0", default-features = false }
astral-tokio-tar = { workspace = true }
async-compression = { workspace = true }
bytes = { version = "1.11", default-features = false }
clap = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = [
  "rustls",
  "socks"
] }
tokio = { workspace = true }
zip = { version = "7.2", default-features = true }

[lints]
workspace = true
